--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@
 
 .slider__container{
     position: relative;
-    padding: 90px 0 140px 140px;
+    padding: 90px 0 130px 140px;
     background-color: #E8EAE3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 50px;
-    min-height:450px;
+    height:450px;
 }
 
 .slider__inner{
@@ -39,7 +39,7 @@
 
 .slider__bg-img{
     position: absolute;
-    top:-24px;
+    top:-25px;
     right:-4px;
 }
 
@@ -87,7 +87,7 @@
 
 .slider__tabs{
     position: absolute;
-    bottom:45px;
+    bottom:75px;
     z-index: 2;
     display: flex;
     justify-content: center;
@@ -138,16 +138,16 @@
 }
 
 
-@media (max-width: 376px) {
+@media (max-width: 430px) {
     .slider{
-        width:100%;
+        max-width:100%;
         padding:0;
     }
 
     .slider__container{
         padding:30px;
         border-radius: 30px;
-        min-height: 300px;
+        height: 300px;
         overflow: hidden;
         box-shadow: none;
     }
@@ -187,14 +187,16 @@
     }
 
     .slider__bg-img{
-        top:auto;
-        right:2px;
-        bottom:0;
+        top: auto;
+        left: 0;
+        right: 0px;
+        bottom: 0;
+        width: 100%;
     }
 
     .slider__list .slick-dots{
         position: absolute;
-        bottom:55px;
+        bottom:50px;
         margin-left:40px;
         display: flex;
         justify-content: space-between;
