--- a/css/style.css
+++ b/css/style.css
@@ -138,9 +138,9 @@
 }
 
 
-@media (max-width: 430px) {
+@media (max-width: 768px) {
     .slider{
-        max-width:100%;
+        max-width:375px;
         padding:0;
     }
 
@@ -196,7 +196,7 @@
 
     .slider__list .slick-dots{
         position: absolute;
-        bottom:50px;
+        bottom:55px;
         margin-left:40px;
         display: flex;
         justify-content: space-between;
